--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,19 +3,18 @@
 		"target": "ES2020",
 		"module": "ESNext",
 		"lib": ["ES2020"],
-		"moduleResolution": "node",
+		"moduleResolution": "bundler",
 		"declaration": true,
+		"isolatedDeclarations": true,
 		"declarationMap": true,
 		"outDir": "./dist",
 		"rootDir": ".",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
-		"strict": false,
-		"noEmit": false,
-		"emitDeclarationOnly": true,
+		"strict": true,
 		"types": ["node"]
 	},
-	"include": ["generated/**/*", "sdk/**/*", "helpers/**/*"],
+	"include": ["src/**/*"],
 	"exclude": ["node_modules", "dist", "scripts"]
 }
