--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 	},
 	"scripts": {
 		"build": "bun run clean && bun scripts/download-specs.ts && bun scripts/generate-types.ts && bunx bunup",
-		"release": "bun run build && dotenv -- npm publish",
+		"release": "bun run build && bunx changeset publish",
 		"clean": "rm -rf dist specs src/generated",
-		"format": "biome check --write --unsafe"
+		"format": "biome check --write --unsafe",
+		"changeset": "changeset",
+		"version": "changeset version"
 	},
 	"keywords": [
 		"paypal",
@@ -30,6 +32,8 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@biomejs/biome": "2.3.5",
+		"@changesets/changelog-github": "^0.5.2",
+		"@changesets/cli": "^2.29.8",
 		"@types/node": "24.10.1",
 		"bunup": "0.15.14",
 		"dotenv-cli": "11.0.0",
