--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,34 +15,34 @@ jobs:
       contents: write
       pull-requests: write
       id-token: write
-
     steps:
-      - name: Checkout code
+      - name: Checkout Repo
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: 'pnpm'
           registry-url: 'https://registry.npmjs.org'
 
-      - name: Enable Corepack
-        run: corepack enable
+      - name: Update npm for OIDC support
+        run: npm install -g npm@latest
 
-      - name: Install dependencies
-        run: pnpm install
+      - name: Install Dependencies
+        run: pnpm install --frozen-lockfile
 
-      - name: Build package
-        run: pnpm build
+      - name: Build
+        run: pnpm run build
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
         with:
-          publish: pnpm release
-          version: pnpm changeset version
+          publish: pnpm run release
           commit: 'chore: version packages'
           title: 'chore: version packages'
         env:
